The screen was too wide on mobile -- fix

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -14,9 +14,11 @@ footer ul {
   justify-content: center;
   align-items: center;
   gap: 1.25em;
+  flex-wrap: wrap;
+  row-gap: 0.25em;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0.25rem 0.5rem;
 }
 
 footer li {
